--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-iframe-click",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "license": "MIT",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
@@ -12,6 +12,7 @@
         "react": "^16.8.0",
         "typescript": "^3.6.2"
     },
+    "homepage": "https://github.com/springload/react-iframe-click/",
     "scripts": {
         "build": "tsc"
     }
