--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "react-iframe-click",
-    "version": "1.0.2",
+    "version": "2.0.1",
     "license": "MIT",
-    "main": "dist/index.js",
-    "typings": "dist/index.d.ts",
+    "main": "build/index.js",
+    "typings": "build/index.d.ts",
     "peerDependencies": {
         "react": "^16.8.0"
     },
@@ -14,6 +14,7 @@
     },
     "homepage": "https://github.com/springload/react-iframe-click/",
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "prepublishOnly": "yarn build"
     }
 }
