--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "jsx": "react",
         "declaration": true,
         "sourceMap": true,
+        "noEmit": false,
         "module": "commonjs",
         "target": "esnext",
         "strict": true,
